--- a/_includes/about/about.scss
+++ b/_includes/about/about.scss
@@ -73,6 +73,10 @@
           max-width: 300px;
         }
       }
+
+      .clutch-widget {
+        padding-top: 40px;
+      }
     }
 
     .collage {
