--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -12,13 +12,19 @@
     <div class="info transite transite-up sn-1">
       <div class="title">{{ content.title }}</div>
       {% for item in content.descriptions %}
-        <div class="description">{{ item }}</div>
+      <div class="description">{{ item }}</div>
       {% endfor %}
+      <div class="clutch-widget" data-url="https://widget.clutch.co" data-widget-type="2" data-height="50"
+           data-clutchcompany-id="1403478">
+        <iframe id="iframe-0.9792492733831788" width="100%"
+                src="https://widget.clutch.co/widgets/get/2?ref_domain=implex.dev&amp;uid=1403478&amp;ref_path=/"
+                height="50px" style="border: none; display: block;" title="Implex Clutch Review Widget 2"></iframe>
+      </div>
     </div>
     <div class="collage">
       {% for item in content.images %}
-        {% assign animationIndex = forloop.index | plus: 1 %}
-        <img src="{{ prefix }}{{ item }}" class="transite transite-up sn-{{ animationIndex }}">
+      {% assign animationIndex = forloop.index | plus: 1 %}
+      <img src="{{ prefix }}{{ item }}" class="transite transite-up sn-{{ animationIndex }}">
       {% endfor %}
     </div>
   </div>
