--- a/_includes/partnership/partnership.html
+++ b/_includes/partnership/partnership.html
@@ -9,9 +9,18 @@
   <div class="overlay">
     <div class="content content-block">
       <h1 class="title transite transite-up sn-1">Partnership is the only way to success!</h1>
-      <h2 class="description transite transite-up sn-2">We strive to build relationships with our clients that last for years. This makes trust,
+      <h2 class="description transite transite-up sn-2">We strive to build relationships with our clients that last for
+        years. This makes trust,
         reliability and respect the principle values of our culture.</h2>
       <div class="button-wrapper transite transite-up sn-3">
+        <svg role="presentation" class="arrow-icon-mobile" style="fill:#ffffff;"
+             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 70">
+          <path d="M30.6 47.5c-.6-.5-1.6-.4-2.1.2L19 59.6V5.5c0-.8-.7-1.5-1.5-1.5S16 4.7 16 5.5v54.1L6.5 47.7c-.6-.6-1.5-.7-2.1-.2-.7.5-.8 1.5-.3 2.1l12.2 15.2c.3.4.7.6 1.2.6s.9-.2 1.2-.6l12.2-15.2c.5-.6.4-1.6-.3-2.1z"></path>
+        </svg>
+        <svg role="presentation" class="arrow-icon " style="fill:#ffffff; " xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 80 180">
+          <path d="M54.1 108c-.5 0-.9-.2-1.2-.6-.5-.7-.3-1.6.4-2.1 1.5-1 9.5-5.5 14.6-8.3-17.4-.5-31.3-7.3-41.3-20C9.9 55.7 9.5 24.2 14.2 3.7c.2-.8 1-1.3 1.8-1.1.8.2 1.3 1 1.1 1.8-4.6 19.9-4.2 50.3 11.8 70.8 9.5 12.2 23 18.6 39.9 18.9h.3l-3.2-4c-1.4-1.7-2.7-3.3-4.1-5.1-.7-.9-1.5-1.9-2.3-2.9-.5-.6-.4-1.6.2-2.1.6-.5 1.6-.4 2.1.2 0 0 0 .1.1.1l6.4 7.9c.5.6.9 1.1 1.4 1.7 1.5 1.8 3.1 3.6 4.3 5.5 0 .1.1.1.1.2.1.2.1.3.2.5v.3c0 .2 0 .3-.1.5 0 .1-.1.1-.1.2-.1.2-.2.3-.3.4-.1.1-.2.1-.3.2 0 0-.1 0-.2.1-.9.4-16 8.6-18.2 10.1-.4 0-.7.1-1 .1z"></path>
+        </svg>
         <a href="/#contact-us" class="button">Contact Us</a>
       </div>
     </div>
