--- a/_includes/about/about.scss
+++ b/_includes/about/about.scss
@@ -72,10 +72,15 @@
           font-size: 16px;
           max-width: 300px;
         }
+
+        .link {
+          color: $orange;
+          text-decoration: none;
+        }
       }
 
       .clutch-widget {
-        padding-top: 40px;
+        padding-top: 60px;
       }
     }
 
