--- a/_pages/case-study/bsg/bsg.scss
+++ b/_pages/case-study/bsg/bsg.scss
@@ -1,9 +1,9 @@
-.smartlane {
+.bsg {
   #image1 {
     height: 560px;
     
     @include small-desktop-screen {
-      height: 460px;
+      height: 100%;
     }
   }
 }
