add bg to contact form

--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -7,6 +7,7 @@
 
 <section class="section section-dark contact-us" id="contact-us">
     {% assign content = site.data.contact-us %}
+  <div class="overlay">
     <div class="content">
         <div class="text-center">
             <h1 class="title transite transite-up sn-1">{{ content.title }}</h1>
@@ -67,4 +68,5 @@
             <div class="success-text">{{ content.successText }}</div>
         </div>
     </div>
+  </div>
 </section>
