--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -168,6 +168,10 @@ body {
   line-height: 1.55;
   margin-top: 60px;
 
+  @include tablet-screen {
+    margin: 0;
+  }
+
   h1, h2 {
     text-align: center;
     line-height: 1.23;
