--- a/_includes/clients-carousel/clients-carousel.scss
+++ b/_includes/clients-carousel/clients-carousel.scss
@@ -6,6 +6,10 @@
     background-color: black;
     padding-bottom: 60px;
 
+    @include mobile-screen {
+      padding-bottom: 0;
+    }
+
     .splide__arrow {
       top: 58%;
     }
