--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -168,6 +168,10 @@ body {
   line-height: 1.55;
   margin-top: 60px;
 
+  @include tablet-screen {
+    margin: 0;
+  }
+
   h1, h2 {
     text-align: center;
     line-height: 1.23;
@@ -208,12 +212,22 @@ body {
   section {
     padding: 75px 0;
 
+    @include mobile-screen {
+      padding: 30px 0 45px;
+    }
+
     &.section-black {
       background-color: #000;
     }
 
     &.section-grey {
       background-color: #f5f5f5;
+    }
+
+    &.remove-padding {
+      @include mobile-screen {
+        padding-bottom: 0;
+      }
     }
   }
 
@@ -234,7 +248,6 @@ body {
     }
 
     h1 {
-      max-width: 600px;
       margin: 0 auto;
     }
   }
@@ -247,8 +260,18 @@ body {
       margin: 0 20px;
     }
 
+    &.margin-top {
+      margin-top: 30px;
+    }
+
     @include tablet-screen {
       display: block;
+    }
+
+    .quote + .quote {
+      @include mobile-screen {
+        margin-top: 20px;
+      }
     }
   }
 
@@ -263,6 +286,11 @@ body {
 
     @include small-tablet-screen {
       font-size: 20px;
+    }
+
+    @include mobile-screen {
+      margin-left: 20px;
+      margin-right: 20px;
     }
   }
 
@@ -290,6 +318,12 @@ body {
 
     &.padding-top {
       padding-top: 28px;
+    }
+  }
+
+  .column-content + .column-content {
+    @include tablet-screen {
+      padding-top: 10px;
     }
   }
 
@@ -327,6 +361,10 @@ body {
         margin-top: 100px;
       }
 
+      @include mobile-screen {
+        margin-top: 30px;
+      }
+
       & > h2 {
         font-size: 42px;
       }
@@ -357,6 +395,18 @@ body {
 
       @include tablet-screen {
         margin: 0 auto;
+      }
+    }
+
+    &.margin-top {
+      @include tablet-screen {
+        margin-top: 20px;
+      }
+    }
+
+    &.remove-padding {
+      @include mobile-screen {
+        padding: 0;
       }
     }
   }
