--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -413,6 +413,10 @@ body {
         padding: 0;
       }
     }
+
+    &.center-content {
+      @include flex(column, center, center);
+    }
   }
 
   .technologies {
