fix redirect to main page when click 'contact-us' button in nav bar

--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -18,15 +18,14 @@
 <body>
   {% include header/header.html black=true %}
   {{ content }}
-  {% if page.hideContactForm %}
-  {% else %}
   {% if page.showSlider %}
   {% include clients-carousel/clients-carousel.html black=true %}
   {% endif %}
+  {% if page.showContactForm %}
   {% include contact-us/contact-us.html %}
   {% endif %}
   {% include footer/footer.html careers = page.careers %}
-  <script src="../assets/scripts/script.js?q=20220805"></script>
-  <script src="../assets/scripts/splide.min.js"></script>
+  <script src="{{ site.url }}/assets/scripts/script.js?q=20220805"></script>
+  <script src="{{ site.url }}/assets/scripts/splide.min.js"></script>
 </body>
 </html>
