--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,6 @@
   </div>
   {% include contact-us/contact-us.html %}
   {% include footer/footer.html %}
-  <script src="../assets/scripts/script.js?q=20220805"></script>
+  <script src="{{ site.url }}/assets/scripts/script.js?q=20220805"></script>
 </body>
 </html>
