--- a/_includes/clients-carousel/clients-carousel.html
+++ b/_includes/clients-carousel/clients-carousel.html
@@ -46,7 +46,7 @@
                     Study</a>
                 {% endif %}
                 <div class="image transite transite-{{imageAnimationDirection}} sn-{{ animationIndex }}">
-                  <img src="../{{ prefix }}{{ item.image }}">
+                  <img src="{{ site.url }}/{{ prefix }}{{ item.image }}">
                 </div>
               </div>
             </li>
