--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   {% include header/header.html %}
   {{ content }}
   {% include footer/footer.html %}
-  <script src="../assets/scripts/script.js?q=20220805"></script>
-  <script src="../assets/scripts/splide.min.js"></script>
+  <script src="{{ site.url }}/assets/scripts/script.js?q=20220805"></script>
+  <script src="{{ site.url }}/assets/scripts/splide.min.js"></script>
 </body>
 </html>
