--- a/_includes/contact-us/contact-us.scss
+++ b/_includes/contact-us/contact-us.scss
@@ -8,10 +8,14 @@
   .overlay {
     @include size(100%, 100%);
     background-image: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .9));
-    padding: 120px 0 136px;
+    padding: 150px 0;
+
+    @include tablet-landscape-screen {
+      padding: 120px 0;
+    }
 
     @include tablet-screen {
-      padding: 62px 20px 20px;
+      padding: 80px 20px;
     }
 
     .text-center {
