--- a/_includes/partnership/partnership.scss
+++ b/_includes/partnership/partnership.scss
@@ -10,15 +10,24 @@
 
     .content-block {
       margin: 0 auto;
-      padding: 110px 0;
+      padding: 150px 0;
       text-align: center;
+
+      @include tablet-landscape-screen {
+        padding: 120px 0;
+      }
+
+      @include small-tablet-screen {
+        padding: 80px 0;
+      }
 
       @include tablet-screen {
         max-width: 600px;
       }
 
-      @include mobile-screen {
-        padding-inline: 20px;
+      @include small-tablet-screen {
+        padding-right: 20px;
+        padding-left: 20px;
       }
     }
 
