--- a/_includes/post-preview/post-preview.scss
+++ b/_includes/post-preview/post-preview.scss
@@ -28,6 +28,7 @@
       @include size(100%, 192px);
       margin-right: auto;
       margin-bottom: 20px;
+      background-size: contain;
     }
   }
 
