fix having a lot h1 heading on the main page. add h2 and h3

--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -10,7 +10,7 @@
   {% assign content = site.data.about %}
   <div class="content content-block">
     <div class="info transite transite-up sn-1">
-      <div class="title">{{ content.title }}</div>
+      <h2 class="title">{{ content.title }}</h2>
       {% for item in content.descriptions %}
       <div class="description">{{ item }}</div>
       {% endfor %}
