--- a/_includes/intro/intro.html
+++ b/_includes/intro/intro.html
@@ -8,11 +8,11 @@
 <section class="section section-dark intro">
   <div class="overlay">
     <div class="content intro-wrapper">
-      <div class="title transite transite-up sn-1">Engineering Your <br class="break-line">Dreams</div>
-      <div class="description transite transite-up sn-2">We develop web and mobile applications with the team of the
+      <h2 class="title transite transite-up sn-1">Engineering Your <br class="break-line">Dreams</h2>
+      <h1 class="description transite transite-up sn-2">We develop web and mobile applications with the team of the
         best engineers equipped with
         reliable tools and following modern agile methodologies
-      </div>
+      </h1>
       <div class="button-wrapper transite transite-up sn-3">
         <a href="/#contact-us" class="button">contact us</a>
       </div>
