--- a/_includes/intro/intro.scss
+++ b/_includes/intro/intro.scss
@@ -62,6 +62,8 @@
         font-size: 24px;
         max-width: 960px;
         line-height: 36px;
+        font-weight: 300;
+        margin: 0;
 
         @include small-desktop-screen {
           font-size: 20px;
