--- a/_includes/services/services.html
+++ b/_includes/services/services.html
@@ -16,7 +16,7 @@
           <div class="icon">
             <img src="{{ prefix }}{{ item.icon }}">
           </div>
-          <div class="service-title">{{ item.title }}</div>
+          <h3 class="service-title">{{ item.title }}</h3>
           <div class="service-description">{{ item.description }}</div>
         </div>
       {% endfor %}
