--- a/_includes/cases-list/cases-list.html
+++ b/_includes/cases-list/cases-list.html
@@ -28,7 +28,7 @@
         {% endif %}
         <div class="clients-block-background" style="background-color: {{ item.backgroundColor }}">
             <div class="{{ clientsBlock_classes }}">
-                <div class="title transite transite-up sn-{{ animationTextIndex }}">{{ item.title }}</div>
+                <h2 class="title transite transite-up sn-{{ animationTextIndex }}">{{ item.title }}</h2>
                 <div class="description transite transite-up sn-{{ animationTextIndex }}">{{ item.description }}</div>
                 <a href="{{ item.link }}" class="button button-outline transite transite-up sn-{{ animationIndex }}">View
                     Case Study</a>
