--- a/_includes/blog-posts/blog-posts.scss
+++ b/_includes/blog-posts/blog-posts.scss
@@ -1,5 +1,6 @@
 .blog-posts {
   .title {
+    font-size: 40px;
     @include small-desktop-screen {
       font-size: 38px;
     }
@@ -14,6 +15,7 @@
   }
 
   .subtitle {
+    font-size: 30px;
     margin-bottom: 90px;
 
     @include small-desktop-screen {
