Adding og:image to the use-cases page

--- a/_includes/_head/og-tags.html
+++ b/_includes/_head/og-tags.html
@@ -5,7 +5,7 @@
   <meta property="og:description" content="{{ page.ogDescription }}" />
 {% endif %}
 {% if page.ogImage %}
-  <meta property="og:image" content="{{ page.ogImage }}" />
+  <meta property="og:image" content="{{ site.url }}{{ page.ogImage }}" />
 {% endif %}
 {% if page.description %}
   <meta name="description" content="{{ page.description }}" />
