--- a/_includes/blog-posts/blog-posts.html
+++ b/_includes/blog-posts/blog-posts.html
@@ -16,7 +16,7 @@
   <div class="content">
     <div class="text-center">
       <h2 class="title">{{ include.title }}</h2>
-      <h3 class="subtitle">{{ include.subtitle }}</h3>
+      <div class="subtitle">{{ include.subtitle }}</div>
     </div>
     <div class="posts-list">
       {% for post in posts limit: include.limit %}
