--- a/_includes/blog-posts/blog-posts.scss
+++ b/_includes/blog-posts/blog-posts.scss
@@ -16,7 +16,9 @@
 
   .subtitle {
     font-size: 30px;
-    margin-bottom: 90px;
+    line-height: 1.5;
+    max-width: 560px;
+    margin: 0 auto 90px;
 
     @include small-desktop-screen {
       font-size: 22px;
