--- a/_includes/clients/clients.html
+++ b/_includes/clients/clients.html
@@ -11,7 +11,7 @@
   <div class="content">
     <div class="text-center">
       <h2 class="title transite transite-up sn-1">{{ content.title }}</h2>
-      <h3 class="subtitle transite transite-up sn-2">{{ content.subTitle }}</h3>
+      <div class="subtitle transite transite-up sn-2">{{ content.subTitle }}</div>
     </div>
     {% include clients-carousel/clients-carousel.html showButton=true %}
     <a href="/case-study"
