--- a/_includes/contact-us/contact-us.html
+++ b/_includes/contact-us/contact-us.html
@@ -11,7 +11,7 @@
     <div class="content">
         <div class="text-center">
             <h2 class="title transite transite-up sn-1">{{ content.title }}</h2>
-            <h3 id="contact-form-subtitle" class="subtitle transite transite-up sn-2">{{ content.subTitle }}</h3>
+            <div id="contact-form-subtitle" class="subtitle transite transite-up sn-2">{{ content.subTitle }}</div>
         </div>
         <form id="contact-form" class="form-wrapper transite transite-up sn-3">
             <div class="input-wrapper">
