--- a/_includes/advantages/advantages.scss
+++ b/_includes/advantages/advantages.scss
@@ -16,6 +16,11 @@
     }
 
     .description {
+      @include font(24px, 300);
+      line-height: 1.5;
+      max-width: 560px;
+      margin: 0 auto;
+
       @include small-desktop-screen {
         @include font(22px, 300);
       }
@@ -63,6 +68,8 @@
         grid-column: 2 / 2;
         display: flex;
         align-items: center;
+        max-width: 100%;
+        margin: 0;
 
         @include small-desktop-screen {
           font-size: 16px;
