--- a/_includes/clients/clients.scss
+++ b/_includes/clients/clients.scss
@@ -14,6 +14,11 @@
   }
 
   .subtitle {
+    @include font(24px, 300);
+    line-height: 1.5;
+    max-width: 560px;
+    margin: 0 auto;
+
     @include small-desktop-screen {
       font-size: 22px;
     }
