--- a/_includes/how-it-works/how-it-works.html
+++ b/_includes/how-it-works/how-it-works.html
@@ -10,14 +10,14 @@
   <div class="content content-block">
     <div class="text-center transite transite-up sn-1">
       <h2 class="title">{{ content.title }}</h2>
-      <h3 class="description">{{ content.description }}</h3>
+      <div class="description">{{ content.description }}</div>
     </div>
     <div class="product-container">
       {% for item in content.products %}
         {% assign animationIndex = forloop.index | plus: 1 %}
         <div class="product-block transite transite-up sn-{{ animationIndex }}">
           <div class="index">-{{ forloop.index }}-</div>
-          <div class="product-title">{{ item.title }}</div>
+          <h3 class="product-title">{{ item.title }}</h3>
           <div class="product-description">{{ item.description }}</div>
         </div>
       {% endfor%}
