--- a/_includes/partnership/partnership.html
+++ b/_includes/partnership/partnership.html
@@ -9,9 +9,9 @@
   <div class="overlay">
     <div class="content content-block">
       <h2 class="title transite transite-up sn-1">Partnership is the only way to success!</h2>
-      <h3 class="description transite transite-up sn-2">We strive to build relationships with our clients that last for
+      <div class="description transite transite-up sn-2">We strive to build relationships with our clients that last for
         years. This makes trust,
-        reliability and respect the principle values of our culture.</h3>
+        reliability and respect the principle values of our culture.</div>
       <div class="button-wrapper transite transite-up sn-3">
         <svg role="presentation" class="arrow-icon-mobile" style="fill:#ffffff;"
              xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 70">
