--- a/_includes/partnership/partnership.scss
+++ b/_includes/partnership/partnership.scss
@@ -42,6 +42,10 @@
     }
 
     .description {
+      @include font(24px, 300);
+      line-height: 1.5;
+      margin: 0 auto;
+      max-width: 600px;
       @include small-desktop-screen {
         @include font(22px, 300);
       }
