--- a/_includes/blog-posts/blog-posts.html
+++ b/_includes/blog-posts/blog-posts.html
@@ -15,8 +15,13 @@
 <div class="blog-posts">
   <div class="content">
     <div class="text-center">
+      {% if include.mainPage %}
       <h2 class="title">{{ include.title }}</h2>
       <div class="subtitle">{{ include.subtitle }}</div>
+      {% else %}
+      <h1 class="title">{{ include.title }}</h1>
+      <h2 class="subtitle">{{ include.subtitle }}</h2>
+      {% endif %}
     </div>
     <div class="posts-list">
       {% for post in posts limit: include.limit %}
