--- a/_includes/blog-posts/blog-posts.scss
+++ b/_includes/blog-posts/blog-posts.scss
@@ -31,6 +31,7 @@
     @include small-tablet-screen {
       @include font(20px, 300);
       margin-bottom: 45px;
+      padding: 0 20px;
 
     }
   }
