--- a/_includes/how-it-works/how-it-works.scss
+++ b/_includes/how-it-works/how-it-works.scss
@@ -63,7 +63,7 @@
       }
 
       @include small-tablet-screen {
-        padding: 44px 5%;
+        padding: 44px 20px;
         width: 100%;
         margin: 0;
       }
