--- a/_layouts/default-static-header.html
+++ b/_layouts/default-static-header.html
@@ -6,7 +6,7 @@
 {% endcomment %}
 
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
