--- a/_includes/post-preview/post-preview.html
+++ b/_includes/post-preview/post-preview.html
@@ -6,7 +6,7 @@
 {% endcomment %}
 
 <a href="{{ include.post.url }}" class="post-preview">
-  <div class="image" style="background-image: url({{include.post.image}})"></div>
+  <div role="img" aria-label="{{ include.post.imgAlt }}" class="image" style="background-image: url({{include.post.image}})"></div>
   <div>
     <div class="title">{{ include.post.title }}</div>
     <div class="description">{{ include.post.description }}</div>
