--- a/_includes/advantages/advantages.html
+++ b/_includes/advantages/advantages.html
@@ -18,7 +18,7 @@
         {% assign animationIndex = forloop.index | plus: 1 %}
         <div class="advantage transite transite-up sn-{{ animationIndex }}">
           <div class="icon">
-            <img src="{{ prefix }}{{ item.icon }}">
+            <img alt="{{ item.alt }}" src="{{ prefix }}{{ item.icon }}">
           </div>
           <h3 class="adv-title">{{ item.title }}</h3>
           <div class="adv-description">{{ item.description }}</div>
