--- a/_includes/services/services.html
+++ b/_includes/services/services.html
@@ -14,7 +14,7 @@
         {% assign animationIndex = forloop.index | plus: 1 %}
         <div class="service transite transite-up sn-{{ animationIndex }}">
           <div class="icon">
-            <img src="{{ prefix }}{{ item.icon }}">
+            <img alt="{{ item.alt }}" src="{{ prefix }}{{ item.icon }}">
           </div>
           <h3 class="service-title">{{ item.title }}</h3>
           <div class="service-description">{{ item.description }}</div>
