add some optimizations

--- a/_includes/vacancy-preview/vacancy-preview.html
+++ b/_includes/vacancy-preview/vacancy-preview.html
@@ -7,7 +7,7 @@
 
 <a href="{{ include.post.url }}" class="vacancy-preview">
   <div>
-    <div class="title">{{ include.post.title }}</div>
+    <div class="title">{{ include.post.headingTitle }}</div>
     <div class="description">{{ include.post.description }}</div>
     <div class="tag">{{ include.post.tag }}</div>
   </div>
