--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
 <body>
   {% include header/header.html black=true %}
   <div class="post-content">
-    <h1>{{ page.title }}</h1>
+    <h1>{{ page.headingTitle }}</h1>
     <div class="post-metadata">
       <span>{{ page.date | date: "%d.%m.%Y" }}</span><span>{{ page.tag }}</span>
     </div>
