--- a/_layouts/vacancy.html
+++ b/_layouts/vacancy.html
@@ -21,7 +21,7 @@
   {% include header/header.html black=true %}
   <div class="vacancy">
     <div class="post-content">
-      <h1>{{ page.title }}</h1>
+      <h1>{{ page.headingTitle }}</h1>
       <div class="post-metadata">
         <span>{{ page.date | date: "%d.%m.%Y" }}</span><span>{{ page.tag }}</span>
       </div>
