remove unused file data

--- a/_includes/blog/blog.html
+++ b/_includes/blog/blog.html
@@ -9,7 +9,7 @@
   {% assign prefix = site.imgPrefix %}
   {% assign content = site.data.blog %}
 
-  {% include blog-posts/blog-posts.html mainPage=true limit=3 title=content.title subtitle=content.subTitle %}
+  {% include blog-posts/blog-posts.html mainPage=true limit=3 title="Implex Blog" subtitle="Here we publish the most interesting things we experienced during our work" %}
   <div class="text-center">
     <a href="/blog">
       <button class="button button-outline">Read all blogs</button>
