--- a/_includes/header/header.html
+++ b/_includes/header/header.html
@@ -39,7 +39,7 @@
       </label>
       <div class="wrapper">
         <a href="/" class="logo">
-          <img src="{{ prefix }}logo.png" alt="Implex logo">
+          <img src="{{ prefix }}logo.png" alt="Implex mobile logo">
         </a>
         {% for item in navBar %}
           {% include header/menu-item.html item=item %}
