--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -513,6 +513,8 @@ body {
 
   .technologies {
     margin-top: 55px;
+    font-size: 20px;
+    margin-bottom: 0;
 
     @include small-desktop-screen {
       font-size: 22px;
